public/resources/css/wall.css
/*
 * Wall displaying the discussions and events in game
 */

/*
 * For the wall displayed on the global interface (not in the city interface)
 */
#floating_wall {
    position:absolute;
    bottom:0;
    height:0;
    overflow:auto;
    width:24.6rem;
    margin-left:26.2rem;
    border-top-left-radius:1rem;
    border-top-right-radius:1rem;
    box-shadow:4px -4px 10px black;
    z-index:40;
    transition-duration: 0.3s;
}
#floating_wall #wall {
    height:100%;
    width: 100%;
    margin:0;
}
#floating_wall #wallHeader {
    font-size:1.5em;
    background:#b71c1c;
    color:white;
    cursor:pointer;
}
#floating_wall #wallHeader:hover {
    background:#ff0000;
}
#floating_wall #wallHeader::selection {
    background:none;
}

/*
 * Common styles for the wall (lateral panel or inside city interface)
 */
#wall .tabs {
    border-bottom:1px solid grey;
}
#wall .tabs .tab a {
    /* Fix for Materialize.css (prevents horizontal overflow on large screens) */
    padding: 0 12px; 
}
#wall h2 {
    margin:0;
    padding:0.4rem 0;
    text-align:center;
}
#wall h2 .arrow {
    float:right;
    height:1.1em;
    width: 1.1em;
    line-height:1.6em;
    margin:0.2em 0.2rem 0 0;
    border-radius:1em;
    font-size:0.9em;
    background:white;
    color:darkred;
    transition-duration: 1s;
}
#wall .contents {
    display:flex;
    flex-direction:column;
    padding: 0 0.1em;
    height:97%; /* Not 100% because the "Communications" header needs space too. Ugly fix. */
    text-align:left;
}
#wall .body {
    height:100%;
    overflow:auto;
}
#wall .footer {
    padding:0.5rem 0 0 0;
    border-top:1px solid grey;
    background: #F2F3F4;
}
#wall .footer .discuss {
    margin:0;
}

/* New topic */
#buttonNewTopic input[type=text] {
    height:4em;
    padding:1em 0 1em 1em;
    box-sizing: border-box;
    border-width: 2px !important;
    border-color: darkred !important;
    background:#F2D7D5 !important;
}
#buttonNewTopic input::placeholder {
  color: darkred;
}
#buttonNewTopic .material-icons {
    position:absolute;
    right:1rem;
    margin-top:1.4rem;
    font-size:1.6em;
    color:darkred;
    opacity:0.8;
}
#hideSendform {
    margin:0.5em 0;
    font-size:0.9em;
}
/* To send a message */
#wall textarea,
#wall input[type="text"] {
    width:99%;
    /*margin:0.5em 0;*/
    border-radius:0.3em;
    border:1px solid grey;
    background-color:whitesmoke;
}
#wall textarea {
    height:8em;
}
#wall input[type="submit"] {
    width:99%;
    margin-bottom:1em;
    font-size:1.1em;
}
#wall input[type="submit"]:hover,
#wall .discuss .replyButton:hover {
    background:#b03a2e;
}

/* Common presentation for discussions and events */
#wall .topic {
    border-radius:0.3em;
}
#wall h3 {
    font-weight:normal;
    letter-spacing: normal;
}
#wall .message {
    margin-top:0.2em;    
    padding:0.3em 0.2em;
    background: #f6ddcc ;
    border-radius:0.2em;
    word-wrap:break-word;
}
#wall .time {
    font-size:0.7em;
    color:grey;
    cursor:help;
    text-align:right;
}
#wall .text {
    font-size:0.9em;
}
#wall .reply_num {
    float:right;
    margin-top:0.2em;
    font-size:0.8em;
    color:#566573;
}
#wall .link_other_messages { /* Link "show other message" in truncated discussions */
    display:flex;
    justify-content:space-between;
    width:15em;
    margin:1em auto;
    padding:0.5em 0;
    border-top:   2px solid darkred;
    border-bottom:2px solid darkred;
    font-size:0.8em;
    text-align:center;
}
#wall .discuss .link_other_messages {
    /* Don't apply this in the comments of game events (grey on grey) */
    color:lightgrey;
    border-color:darkgrey;
}
#wall .link_other_messages:hover {
    color:#e74c3c;
    border-color:#e74c3c;
}

/*
 * Specific presentation for the discussions
 */
#wall .discuss  {
    background:#34495e; /* #7b241c #34495e */
    margin:2.5rem 0;
    box-shadow:0px 8px 15px black;
}
#wall .discuss h3 { /* Topic title */
    margin:0;
    padding:0.3em;
    border-radius:0.3em 0.3em 0 0;
    border-bottom:1px solid #515a5a;
    background:#273746;
    color:white;
    cursor:pointer;
}
#wall .discuss h3:hover {
    background:#566573;
}
#wall .discuss .message {
    margin:0.2rem 0.1rem 0 0.1rem;
}
#wall .discuss .time {
    margin-left:2.1em;
}
#wall .discuss form,
#wall .event form {
    display:none;
}
#send {
    padding:0.1em;
}
#send h3 {
    position:relative;
    font-size:1.3em;
}
#send h3 input {
    display:none;
    margin:0;
}
#send .close {
    position:absolute;
    top:-1.1rem;
    right:0.1rem;
    height:2.8rem;
    width: 2.8rem;
    font-size:1.2em;
    display:flex;
    justify-content: center;
    align-items: center;
    background:darkred;
    border:2px solid white;
    border-radius:50%;
    color:white;
}
#send .message {
    margin:0;
}

/* Button to display the form under a discussion */
#wall .replyButton {
    display:block;
    margin-left:65%;
    padding:0.2rem 0em;
    font-size:0.8em;
    text-align:center;
}
#wall .discuss .replyButton {
    border-radius:0.3rem;
    border-top-left-radius:0;
    border-top-right-radius:0;
    background:darkred;
    font-weight:bold;
    color:white;
}
#wall .sendform {
    padding: 0.4em 0.1rem 0.1rem 0.2rem;
}

/*
 * Specific presentation for the events
 */
#wall .event  {
    margin:1em 0;
    padding-right:0.1em;
    border:1px solid lightgrey;
    background: #eceff1;
}
#wall .event h3 {
    margin:0;
    display:none;
}
#wall .event :nth-child(1) .reply_num {
    display:none;
}
#wall .event :nth-child(1) .pseudo { /* Only for the first message of the thread */
    display:none;
}
#wall .event  .message:first-of-type {
    padding-left:0.5em;
    background:none;
}
#wall .event  .message:not(:first-of-type) { /* Only for the comments under the event */
    margin-left:2em;
    border-left:3px solid #34495e;
    border-bottom:1px solid #34495e;
}
#wall .event ul {
    margin:0 auto;
    padding-left:2em;
}

/*
 * Visual representation of the attack summary
 */
#wall .visual_attack_log {
    display:flex;
    align-items:center;
    margin:0.5em auto 0.8em auto;

}
.visual_attack_log .block {
    display:flex;
    align-items:center;
    height:6.5em;
    width: 6.5em;
    padding-top:1em;
    border:1px solid grey;
    border-radius:0.4em;
    background:#f6ddcc;
    text-align:center;
    box-shadow:4px 4px 6px black;
    box-sizing:border-box;
    cursor:pointer;
}
.visual_attack_log .block:hover,
.survivors_frieze:hover {
    position:relative;
    left:0.15rem;
    top: 0.2rem;
    box-shadow:2px 2px 4px black;
}
.visual_attack_log .arrow {
    font-size:1.4em;
    opacity:0.9;
}
.visual_attack_log .miniblock {
    height:6em;
    padding-top:0.5em;
    font-size:0.8em;
}
.visual_attack_log .good {
    border:4px solid darkgreen;
    background:lightgreen;
}
.visual_attack_log .bad {
    border:4px solid red;
    background:salmon;
}
.survivors_frieze {
    margin-bottom:0.5em;
    font-size:1.5em;
    text-align:center;
    background:#f6ddcc;
    border:1px solid grey;
    border-radius:0.2em;
    box-shadow:4px 4px 6px black;
    cursor:pointer;
}

#wall .log_details {
    display:none;
    margin:0.5em 0;
    padding:0.3em;
    background:lightgrey;
}

#wall .log_details p {
    margin:0.5em 0.5em 0.2em 0.5em;
    padding:0.3em;
    background:salmon;
    __font-style: italic;
}
#wall .log_details p a { /* Help link */
    display:block;
    text-align:right;
    font-style:normal;
    font-size:0.9em;
}

#wall h3 {
    display:block;
}

